--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ header#masthead {
 
 #page-sub-header {
   position: relative;
-  /*padding-top: 5rem;*/
   padding-bottom: 0;
   text-align: center;
   font-size: 1.25rem;
@@ -385,6 +384,8 @@ header#masthead {
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
 }
+
+
 
 body:not(.theme-preset-active) #page-sub-header h1 {
   line-height: 1.6;
@@ -794,6 +795,41 @@ a img.aligncenter {
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
+
+.recipes-shorter-description {
+  text-shadow: unset;
+  font-size: 1rem;
+  font-weight: 200;
+  width: 100%;
+  overflow: hidden;
+}
+
+.recipe-thumbnail {
+  display: flex;
+  height: 318px;
+  padding: 1.5rem;
+  border-radius:3px;
+  background-size: cover;
+}
+
+.recipes-box {
+  color: var(--creamwhite);
+  margin-bottom: 3rem;
+}
+
+.recipes-box::after {
+  content: "";
+  width: 100%;
+  height: 33%;
+  position: absolute;
+  bottom: 10%;
+  display: block;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+}
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
