--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -446,10 +446,28 @@ template {
   display: none !important;
 }
 
-#colophon, .entry-footer {
+#colophon {
   position: relative;
   z-index: 10;
   bottom: -8px;
+}
+
+.edit-link {
+  width: 44px !important;
+  height: 44px !important;
+}
+
+.entry-footer {
+  z-index: 999;
+  margin: .5rem;
+  background: #0099CC;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  border-radius: 22px;
+  position: absolute;
+  top: 0;
 }
 
 h1, h3, h4, h5, h6,
