added class to recipe archive for animation of the background &  added function to animated..nd.js for animaition of the monthly-recipes

--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -207,8 +207,8 @@ a {
 }
 
 a:hover {
-  color: var(--creamwhite);
-  text-decoration: underline;
+  color: var(--primary);
+  text-decoration: unset;
 }
 
 a:not([href]):not([tabindex]) {
