--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ header#masthead {
   text-align: center;
   font-size: 1.25rem;
   background-size: cover !important;
-  background-position: center !important;
+  background-position: center;
   height: calc(78vh - 95px);
 }
 
@@ -810,12 +810,19 @@ a img.aligncenter {
   padding: 1.5rem;
   border-radius:3px;
   background-size: cover;
-  overflow: hidden;
+  transition: all .6s;
+}
+
+.onHover {
+  background-position: 100% 100%, center center;
 }
 
 .recipes-box {
   color: var(--creamwhite);
   margin-bottom: 3rem;
+  overflow: hidden;
+  position: relative;
+  transition: all .3s;
 }
 
 .recipes-box::after {
@@ -823,8 +830,7 @@ a img.aligncenter {
   width: 100%;
   height: 33%;
   position: absolute;
-  bottom: 10%;
-  display: block;
+  bottom: 0;
   background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
