--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -601,6 +601,66 @@ mark,
   content: "\2014 \00A0";
 }
 
+
+/*--------------------------------------------------------------
+# Recipes
+--------------------------------------------------------------*/
+
+#recipe-banner > div > h1 {
+  color: var(--primary);
+  text-transform: uppercase;
+}
+
+#recipe-banner div p {
+  color: var(--creamwhite);
+}
+
+#recipe-banner .post-thumbnail-inner-content {
+  background: rgba(0, 0, 0, 0.8);
+  padding: 2rem 6rem;
+}
+
+.recipes-shorter-description {
+  text-shadow: unset;
+  font-size: 1rem;
+  font-weight: 200;
+  width: 100%;
+  overflow: hidden;
+}
+
+.recipe-thumbnail {
+  display: flex;
+  height: 318px;
+  padding: 1.5rem;
+  border-radius:3px;
+  background-size: cover;
+  transition: all .6s;
+}
+
+.onHover {
+  background-position: 100% 100%, center center;
+}
+
+.recipes-box {
+  color: var(--creamwhite);
+  margin-bottom: 3rem;
+  overflow: hidden;
+  position: relative;
+  transition: all .3s;
+}
+
+.recipes-box::after {
+  content: "";
+  width: 100%;
+  height: 33%;
+  position: absolute;
+  bottom: 0;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+}
+
 .img-fluid {
   max-width: 100%;
   height: auto;
