--- a/style.css
+++ b/style.css
@@ -81,8 +81,7 @@ video {
   top: 43%;
   left: 0;
   width: 100%;
-  height: 100%;
-  pointer-events: none; 
+  height: 99%;
 }
 
 audio:not([controls]) {
@@ -354,11 +353,12 @@ header#masthead {
 
 #page-sub-header {
   position: relative;
+  /*padding-top: 5rem;*/
   padding-bottom: 0;
   text-align: center;
   font-size: 1.25rem;
   background-size: cover !important;
-  background-position: center;
+  background-position: center !important;
   height: calc(78vh - 95px);
 }
 
@@ -384,8 +384,6 @@ header#masthead {
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
 }
-
-
 
 body:not(.theme-preset-active) #page-sub-header h1 {
   line-height: 1.6;
@@ -792,6 +790,9 @@ a img.aligncenter {
   display: inline-block;
 }
 
+/*--------------------------------------------------------------
+# Content
+--------------------------------------------------------------*/
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
