crazy bugs here

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -194,6 +194,10 @@ a {
   color: var(--creamwhite);
 }
 
+.btn-social:last-of-type {
+  list-style-type: none;
+}
+
 .btn-social a:active {
   color: var(--secondary);
 }
