archive-recept optimized for mobile & condition to hide social-media-buttons on recipe-post & media-queries for archive-recipe

--- a/style.css
+++ b/style.css
@@ -1069,6 +1069,14 @@ body:not(.theme-preset-active) footer#colophon {
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .btn-bigger {
+    padding: 8px 1rem;
+  }
+
+  .entry-footer {
+    display: none;
+  }
+  
   #wpsl-gmap {
     position: relative!important;
   }
