added background-attachment & removed comments style.css & added text-shadow title archive-recipes & added condition content.php hide/show CTA Recipe cooking App

--- a/inc/assets/css/presets/typography/roboto-roboto.css
+++ b/inc/assets/css/presets/typography/roboto-roboto.css
@@ -38,7 +38,7 @@ p.overview {
 }
 
 h2.recipes-month-name {
-	text-shadow: unset;
+	text-shadow: 1px 1px #000;
 	text-transform: uppercase;
 	margin-bottom: 1px;
 }
