--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -605,19 +605,19 @@ mark,
 
 
 /*--------------------------------------------------------------
-# Recipes
+# Recipes & Partner
 --------------------------------------------------------------*/
 
-#recipe-banner > div > h1 {
+#recipe-banner > div > h1, #partner-banner > div > h1 {
   color: var(--primary);
   text-transform: uppercase;
 }
 
-#recipe-banner div p {
+#recipe-banner div p, #partner-banner div p {
   color: var(--creamwhite);
 }
 
-#recipe-banner .post-thumbnail-inner-content {
+#recipe-banner .post-thumbnail-inner-content, #partner-banner .post-thumbnail-inner-content {
   background: rgba(0, 0, 0, 0.8);
   padding: 2rem 6rem;
 }
