--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2148,6 +2148,11 @@ pre code {
 }
 
 @media (max-width: 767.98px) {
+  .col-md-4 {
+
+  }
+
+
   .table-responsive-md {
     display: block;
     width: 100%;
