--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -4235,7 +4235,7 @@ tbody.collapse.show {
   background-color: var(--primary);
   min-width: 250px;
   max-width: 250px;
-  padding: 0 32px;
+  padding: 1.5rem 32px 0 32px;
   position: fixed;
   transform: translateX(-100%);
   transition: all 0.5s ease-in-out;
