--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -36,6 +36,7 @@
   --danger: #ee5f5b;
   --light: #e9ecef;
   --dark: #262626;
+  --darker: #1a1919;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -5018,7 +5019,7 @@ tbody.collapse.show {
           flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #32383e;
+  background-color: var(--darker);
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.6);
   border-radius: 0.25rem;
@@ -5070,7 +5071,7 @@ tbody.collapse.show {
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
-  background-color: #515960;
+  background-color: var(--dark);
   border-bottom: 1px solid rgba(0, 0, 0, 0.6);
 }
 
@@ -5084,7 +5085,7 @@ tbody.collapse.show {
 
 .card-footer {
   padding: 0.75rem 1.25rem;
-  background-color: #515960;
+  background-color: var(--dark);
   border-top: 1px solid rgba(0, 0, 0, 0.6);
 }
 
@@ -6039,7 +6040,7 @@ button.close {
           flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #32383e;
+  background-color: var(--dark);
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
