--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ div.wpcf7-response-output {
   margin: 4.7em 0.5em 1em;
 }
 
-.inputPostalCode, .postalCodeSubmit {
+.inputPostalCode, .postalCodeSubmit, .inputPostalCodeDark {
   color: var(--dark-grey);
   width: 100%;
   height: 44px;
@@ -353,10 +353,16 @@ div.wpcf7-response-output {
   letter-spacing: .5px;
 }
 
-.inputPostalCode {
+.inputPostalCode, .inputPostalCodeDark {
   font-size: 1.445rem !important;
   font-weight: 200;
   letter-spacing: 1px;
+}
+
+.inputPostalCodeDark {
+  border: 1px solid rgba(255, 255, 255, 0.125) !important;
+  background: var(--dark) !important;
+  color: #f5f5f5 !important;
 }
 
 .wpsl-pepper-store-list {
