added transtion to all links

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -208,6 +208,7 @@ a {
 a:hover {
   color: var(--creamwhite);
   text-decoration: underline;
+  transition: all .3s;
 }
 
 a:not([href]):not([tabindex]) {
