--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -2697,10 +2697,9 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 .circled-buttons {
   z-index: 999;
   position: fixed;
-  display: inline-block;
-  right: 96px;
-  top: 40vh;
-  width: 40px;
+  right: 12px;
+  top: 37vh;
+  padding: unset;
   transition: all .3s;
 }
 
