--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ h5 {
 p {
   margin-bottom: 1.5em;
 }
+
 h1.entry-title {
   letter-spacing: 2px;
   font-size: 3.2rem;
@@ -382,6 +383,7 @@ header#masthead {
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
   padding: 1.066rem 1rem;
   z-index: 999;
+  min-height: 60px;
 }
 
 .navbar-brand > a {
