--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -633,25 +633,15 @@ mark,
   overflow: hidden;
 }
 
-.recipe-thumbnail {
+.recipes-box {
   display: flex;
   height: 318px;
-  padding: 1.5rem;
   border-radius:3px;
-  background-size: cover;
-  transition: all .6s !important;
-}
-
-.onHover {
-  background-position: 100% 100%, center center;
-}
-
-.recipes-box {
   color: var(--creamwhite);
   margin-bottom: 3rem;
   overflow: hidden;
   position: relative;
-  transition: all .3s;
+  overflow: hidden;
 }
 
 .recipes-box::after {
@@ -664,6 +654,21 @@ mark,
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+}
+
+.recipe-thumbnail {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: all .6s !important;
+  background-position:center center;
+  background-size:cover !important;
+  transform:scale(1);
+}
+
+.onHover {
+  /*background-position: 100% 100%, center center;*/
+  transform: scale(1.1);
 }
 
 .img-fluid {
