added snippet function to link rows inside "presse" content

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -551,6 +551,13 @@ mark,
   content: "\2014 \00A0";
 }
 
+/*--------------------------------------------------------------
+# Linked Row (Presse)
+--------------------------------------------------------------*/
+
+a.wrapping-link h4.linked-headline {
+  color: var(--creamwhite) !important;
+}
 
 /*--------------------------------------------------------------
 # Recipes
