--- a/inc/assets/css/presets/typography/roboto-roboto.css
+++ b/inc/assets/css/presets/typography/roboto-roboto.css
@@ -31,23 +31,30 @@ p, p.overview {
 	font-size: 1.333rem;
 }
 
-p.overview {
+p.overview, p.impress {
 	margin-bottom: 1rem;
 	line-height: 2;
 	color: var(--creamwhite);
 }
 
+p.presse {
+	color: var(--creamwhite);
+	line-height: 1.37;
+}
+
 p.landingpage {
-text-align: center;
-margin: 2rem auto 9rem auto;
-color: #fff;
-font-weight: 400;
-font-size: 1.5rem;
+	text-align: center;
+	margin: 2rem auto 9rem auto;
+	color: #fff;
+	font-weight: 400;
+	font-size: 1.5rem;
+	line-height: 1.4;
 }
   
 .my-landingpage {
 	margin: 6rem auto 5rem auto;
 	font-weight: 600;
+	font-size: 2.1rem;
 }
 
 h2.recipes-month-name {
