--- a/inc/assets/css/presets/typography/roboto-roboto.css
+++ b/inc/assets/css/presets/typography/roboto-roboto.css
@@ -24,7 +24,10 @@ h2, h3, h4, h6 {
 }
 p, pre, table, form {
 	margin: 0 0 1.75rem;
-	color: #797979;
+}
+
+#landingpage p {
+	color: #fff;
 }
 
 p, p.overview {
