finalized product landingpage

--- a/style.css
+++ b/style.css
@@ -920,6 +920,10 @@ a img.aligncenter {
   color: inherit;
 }
 
+#productFrm {
+  color: #000 !important;
+}
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
