--- a/style.css
+++ b/style.css
@@ -345,8 +345,17 @@ div.wpcf7-response-output {
   margin: 4.7em 0.5em 1em;
 }
 
-.inputPostalCode, .postalCodeSubmit, .inputPostalCodeDark {
-  color: var(--dark-grey);
+.inputPostalCodeDark {
+  color: #f5f5f5;
+  width: 100%;
+  height: 44px;
+  line-height: 22px;
+  border-radius: 3px;
+  padding-left: .5rem;
+}
+
+.inputPostalCode, .postalCodeSubmit {
+  color: #000;
   width: 100%;
   height: 44px;
   line-height: 22px;
