navbar logo fixing

--- a/style.css
+++ b/style.css
@@ -1387,7 +1387,8 @@ body:not(.theme-preset-active) footer#colophon {
   .navbar-brand {
     position: absolute;
     right: -39px;
-    top: -2px;
+    top: -1px;
+    height: 52px;
   }
 
   .navbar-brand a img {
@@ -1410,6 +1411,7 @@ body:not(.theme-preset-active) footer#colophon {
 @media only screen and (max-width: 480px) {
   #switcher-wrapper {
     right: 34vw;
+    top: 2px;
   }
   html {
     font-size: 75%;
