--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -13,7 +13,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-:root {
+ :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -2299,6 +2299,40 @@ select.form-control:focus::-ms-value {
   width: 100%;
 }
 
+form > div.btn-group.pull-right {
+  height: 44px;
+}
+
+
+/* Style optimisation for contact form 7*/
+#dark\ qz > span.wpcf7-form-control-wrap > label > input {
+  border: 1px solid rgba(255, 255, 255, 0.125) !important;
+  background: var(--dark) !important;
+  color: #f5f5f5 !important;
+  font-size: 1.445rem !important;
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
+#qz > span.wpcf7-form-control-wrap, #dark\ qz > span.wpcf7-form-control-wrap {
+  width: 60px !important;
+}
+
+.wpcf7-form-control.wpcf7-quiz.form-control {
+  width: 60px;
+  height: 44px;
+  padding: 0.75rem 1rem;
+  font-size: 1.445rem !important;
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
+.wpcf7-not-valid {
+  box-shadow: inset 0 1px 12px var(--primary);
+  transition: all .3s;
+  border-radius: 3px;;
+}
+
 .col-form-label {
   padding-top: calc(0.75rem + 1px);
   padding-bottom: calc(0.75rem + 1px);
@@ -2422,9 +2456,13 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .form-check-input {
-  position: absolute;
-  margin-top: 0.3rem;
-  margin-left: -1.25rem;
+  transform: scale(1.5);
+  left: 3.5px;
+  position: relative;
+}
+
+#wpsl-search-input:focus {
+  color: #000 !important;
 }
 
 .form-check-input:disabled ~ .form-check-label {
@@ -4544,6 +4582,8 @@ tbody.collapse.show {
   /*padding-top: 0.32421875rem;
   padding-bottom: 0.32421875rem;
   margin-right: 1rem;*/
+  top: -5px;
+  position: relative;
   font-size: 1.171875rem;
   line-height: inherit;
   white-space: nowrap;
